[package]
name = "Flipper"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "flipper"
doctest = false

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.25.0", features = [ "init-if-needed" ]}
anchor-spl = "0.25.0"
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }
arrayref = "~0.3.6"
spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
solana-program = "~1.10.29"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
escrow = { path = "../escrow", features = ["cpi"] }
